tdf#159566: match 'central' dominant-baseline to 'middle'

Inkscape also does it the same way

Change-Id: I3e1cea091e7314886bbc9135c55698892239bec7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163006
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 358061b4a480ea763ea541094cef2112f917eb93)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163013
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>